removing redundant unit of measure

--- a/blockchain.topmonks.com/src/stylesheets/main.scss
+++ b/blockchain.topmonks.com/src/stylesheets/main.scss
@@ -480,7 +480,7 @@ footer .social-buttons {
     overflow: scroll;
     position: absolute;
     top: 52px;
-    bottom: 0px;
+    bottom: 0;
     width: 100%;
     background-size: 100%;
     color: #ffffff;
