--- a/blockchain.topmonks.com/src/stylesheets/main.scss
+++ b/blockchain.topmonks.com/src/stylesheets/main.scss
@@ -548,6 +548,7 @@ footer .social-buttons {
 
   .our-work_box {
     width: 100%;
+    padding: 0 24px;
   }
   .security_first-box {
     margin: 0 auto;
