mobile scrolling experience re-implementation, 2nd attemp

--- a/blockchain.topmonks.com/src/stylesheets/main.scss
+++ b/blockchain.topmonks.com/src/stylesheets/main.scss
@@ -476,6 +476,19 @@ footer .social-buttons {
 }
 
 @media (max-width: 768px) {
+  .tm-content-wrapper {
+    overflow: scroll;
+    -webkit-overflow-scrolling:touch;
+    position: absolute;
+    top: 52px;
+    bottom: 0;
+    width: 100%;
+    background-size: 100%;
+    color: #ffffff;
+  }
+  main {
+    background: url("/images/main-info_BG.png") top no-repeat;
+  }
   .opening {
     padding-top: 2em;
   }
@@ -511,7 +524,7 @@ footer .social-buttons {
     padding-left: 0;
   }
 
-  body {
+  main {
     background-size: 100% 30%;
   }
 
