--- a/blockchain.topmonks.com/src/stylesheets/header.scss
+++ b/blockchain.topmonks.com/src/stylesheets/header.scss
@@ -44,7 +44,7 @@
     text-transform: uppercase;
     font-size: 13px;
     position: absolute;
-    top: 5px;
+    top: 7px;
     left: 36px;
   }
   .tm-hamburger__bar {
@@ -85,21 +85,15 @@
   @media screen and (max-width: 839px) {
     position: fixed;
     background-color: #1a1d57;
-    height: 64px;
+    height: 60px;
     .tm-layout-wrapper {
       padding: 8px 16px 0 8px;
-    }
-    + main {
-      margin-top: 52px;
     }
   }
   @media screen and (min-width: 840px) {
     height: 72px;
     .tm-layout-wrapper {
       padding: 20px 0 0 16px;
-    }
-    + main {
-      margin-top: 72px;
     }
   }
 }
@@ -123,6 +117,9 @@
     .tm-menu__list a {
       color: #2d3d90;
       text-align: left;
+    }
+    .tm-menu li:hover {
+      border-bottom-color: rgba(45, 61, 144, 0.5);
     }
   }
 }
@@ -148,6 +145,7 @@
 
     .tm-menu__list li {
       margin: 0 24px;
+      border-bottom: 1px solid transparent;
     }
     .tm-menu__list li + li {
       border-top: 1px solid rgba(45, 61, 144, 0.5);
@@ -163,7 +161,6 @@
 
 .tm-menu__list a {
   color: #ffffff;
-  border-bottom: 2px solid transparent;
 }
 
 .tm-menu--horizontal .tm-menu__list {
