--- a/studio.topmonks.com/src/stylesheets/typography.scss
+++ b/studio.topmonks.com/src/stylesheets/typography.scss
@@ -55,10 +55,14 @@ h2 {
   font-weight: 700;
   color: #FFFFFF;
   text-align: center;
-
 }
 .h2_black {
   color: #000;
+}
+
+h3 {
+  font-size: 18px;
+  font-weight: 900;
 }
 a {
   text-decoration: none;
@@ -72,31 +76,8 @@ a.button {
   margin-top: 1em;
 }
 
-///* MD GRID DESKTOP BREAKPOINT*/
-//@media (min-width: 840px) {
-//}
-
-/* MD GRID TABLET AND ABOVE BREAKPOINT */
-@media (min-width: 480px) {
-  body {
-    font-size: 1.125em; //18px
-  }
-  h1,
-  h2 {
-    font-size: 2.25em; //36px
-    line-height: 46px;
-  }
-  h3 {
-    font-size: 1.5em; //24px
-  }
-  h4 {
-    font-size: 20px; //20px
-  }
-}
-
-nav {
-  .active {
-    color: var(--nav-active);
-    font-weight: bold;
-  }
+a.button_filled {
+  background-color: #FFFFFF;
+  color: #FF7A7E;
+  width: 200px;
 }
