--- a/studio.topmonks.com/src/stylesheets/main.scss
+++ b/studio.topmonks.com/src/stylesheets/main.scss
@@ -56,6 +56,7 @@ section:target {
 .button {
   margin: 0 auto;
 }
+
 .white-box {
   background-color: #FFFFFF;
 }
@@ -100,16 +101,32 @@ section:target {
 /*Pitch us*/
 #pitch_us {
   background: url("/images/pitch-bg.jpg") top no-repeat;
-    svg {
-      padding: 6.5em 0 0 1.5em;
-    }
-  .pitch_us-text {
+  .white-box {
+    --mdc-layout-grid-gutter-desktop: 0;
+  }
+  .box1, .box2 {
+    border-bottom: 1px solid #D5E9FF;
+  }
+  .box1, .box3 {
+    border-right: 1px solid #D5E9FF;
+  }
+  svg {
+    padding: 6.5em 0 0 1.5em;
+  }
+  .box1 .pitch_us-text, .box2 .pitch_us-text {
     padding: 6em 1.5em 1em 2em;
+  }
+  .box3 .pitch_us-text, .box4 .pitch_us-text {
+    padding: 1em 1.5em 2.5em 2em;
+  }
+  .box3 svg, .box4 svg {
+    padding-top: 1.5em;
   }
 }
 
 /*IDEA*/
 #idea {
+  background-color: #FFFFFF;
   .tm-layout-wrapper {
     background: url("/images/idea-bg.jpg") top no-repeat;
     padding-bottom: 2.5em;
@@ -117,15 +134,28 @@ section:target {
 }
 
 /*Portfolio*/
-.portfolio {
+#portfolio {
+  background-color: #FFFFFF;
+  padding-bottom: 4em;
   p {
     font-size: 16px;
     color: #474747;
+    text-align: center;
+    margin-top: 0;
+  }
+  .portfolio-logo {
+    text-align: center;
   }
 }
 
+/*Clients*/
+#clients {
+  background-color: #D7ECFF;
+}
+
 /*Summary*/
-.data {
+#summary {
+  background-color: #FFFFFF;
   h3 {
     text-align: center;
     color: #2E2B2C;
@@ -142,17 +172,24 @@ section:target {
   background: url("/images/network_bg.jpg") top no-repeat;
   h2 {
     text-align: left;
+    margin-bottom: 1.2em;
   }
   p {
-    padding: 24px;
-  }
-  .white-box {
-    padding: 24px;
+    padding: 20px 38px;
+    height: 230px;
   }
   svg {
     margin-top: 3em;
   }
 }
+
+/*Blog*/
+.blog_middle-box {
+  padding: 0 24px;
+  background-color: #FFFFFF;
+  box-shadow: 0 0 20px #d3cdcd;
+}
+
 
 
 blockquote {
